@@ -13,6 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  ******************************************************************************/
+
 package com.badlogic.gdx.setup;
 
 import static java.awt.GridBagConstraints.*;
@@ -25,8 +26,10 @@ import java.awt.BorderLayout;
 import java.awt.Color;
 import java.awt.Component;
 import java.awt.Desktop;
+import java.awt.Dimension;
 import java.awt.EventQueue;
 import java.awt.FileDialog;
+import java.awt.Graphics;
 import java.awt.GridBagConstraints;
 import java.awt.GridBagLayout;
 import java.awt.GridLayout;
@@ -46,12 +49,14 @@ import java.net.URI;
 import java.net.URISyntaxException;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 import javax.imageio.ImageIO;
 import javax.swing.BorderFactory;
 import javax.swing.Box;
 import javax.swing.BoxLayout;
-import javax.swing.ButtonModel;
+import javax.swing.Icon;
 import javax.swing.ImageIcon;
 import javax.swing.JButton;
 import javax.swing.JCheckBox;
@@ -71,8 +76,6 @@ import javax.swing.UIManager;
 import javax.swing.border.Border;
 import javax.swing.border.CompoundBorder;
 import javax.swing.border.EmptyBorder;
-import javax.swing.event.ChangeEvent;
-import javax.swing.event.ChangeListener;
 import javax.swing.event.HyperlinkEvent;
 import javax.swing.event.HyperlinkListener;
 import javax.swing.plaf.ColorUIResource;
@@ -132,6 +135,14 @@ public class GdxSetupUI extends JFrame {
 			JOptionPane.showMessageDialog(this, "Please enter a package name.");
 			return;
 		}
+		Pattern pattern = Pattern.compile("[a-z][a-z0-9_]*(\\.[a-z0-9_]+)+[0-9a-z_]");
+		Matcher matcher = pattern.matcher(pack);
+		boolean matches = matcher.matches();
+
+		if (!matches) {
+			JOptionPane.showMessageDialog(this, "Invalid package name");
+			return;
+		}
 
 		final String clazz = ui.form.gameClassText.getText().trim();
 		if (clazz.length() == 0) {
@@ -158,13 +169,15 @@ public class GdxSetupUI extends JFrame {
 		}
 
 		if (modules.contains(ProjectType.ANDROID)) {
-			if (!GdxSetup.isSdkUpToDate(sdkLocation)) { 
+			if (!GdxSetup.isSdkUpToDate(sdkLocation)) {
+				File sdkLocationFile = new File(sdkLocation);
 				try {  //give them a poke in the right direction
 					if (System.getProperty("os.name").contains("Windows")) {
 						String replaced = sdkLocation.replace("\\", "\\\\");
 						Runtime.getRuntime().exec("\"" + replaced + "\\SDK Manager.exe\"");
 					} else {
-						Runtime.getRuntime().exec("\"" + sdkLocation + "tools/android sdk\"");
+						File sdkManager = new File(sdkLocation, "tools/android");
+						Runtime.getRuntime().exec(new String[] {sdkManager.getAbsolutePath(), "sdk"});
 					}
 				} catch (IOException e) {
 					e.printStackTrace();
@@ -243,11 +256,11 @@ public class GdxSetupUI extends JFrame {
 				}, ui.settings.getGradleArgs());
 				log("Done!");
 				if (ui.settings.getGradleArgs().contains("eclipse") || ui.settings.getGradleArgs().contains("idea")) {
-					log("To import in Eclipse: File -> Import -> General -> Exisiting Projects into Workspace");
+					log("To import in Eclipse: File -> Import -> General -> Existing Projects into Workspace");
 					log("To import to Intellij IDEA: File -> Open -> YourProject.ipr");
 				} else {
 					log("To import in Eclipse: File -> Import -> Gradle -> Gradle Project");
-					log("To import to Intellij IDEA: File -> Import -> build.gradle");
+					log("To import to Intellij IDEA: File -> Open -> build.gradle");
 					log("To import to NetBeans: File -> Open Project...");
 				}
 				SwingUtilities.invokeLater(new Runnable() {
@@ -382,17 +395,21 @@ public class GdxSetupUI extends JFrame {
 
 		private void uiLayout () {
 			title.setLayout(new GridLayout(1, 2));
+			
+			minimize.setPreferredSize(new Dimension(50, 26));
+			exit.setPreferredSize(new Dimension(50, 26));
+
 			title.add(minimize);
 			title.add(exit);
 
 			topBar.setLayout(new GridLayout(1, 1));
-			topBar.add(windowLabel, new GridBagConstraints(0, 0, 0, 0, 0, 0, NORTHWEST, NORTHWEST, new Insets(0, 0, 0, 0), 0, 0));
+			topBar.add(windowLabel, new GridBagConstraints(0, 0, 0, 0, 0, 0, NORTHWEST, VERTICAL, new Insets(0, 0, 0, 0), 0, 0));
 
 			setLayout(new GridBagLayout());
 			add(topBar, new GridBagConstraints(0, 0, 0, 0, 0, 0, NORTH, HORIZONTAL, new Insets(0, 0, 0, 100), 0, 10));
-			add(title, new GridBagConstraints(0, 0, 0, 0, 0, 0, NORTHEAST, NORTHEAST, new Insets(0, 0, 0, 0), 0, 0));
-			add(logo, new GridBagConstraints(0, 0, 1, 1, 1, 0, CENTER, HORIZONTAL, new Insets(40, 6, 12, 6), 0, 0));
-			add(form, new GridBagConstraints(0, 1, 1, 1, 1, 0, CENTER, HORIZONTAL, new Insets(6, 6, 12, 6), 0, 0));
+			add(title, new GridBagConstraints(0, 0, 0, 0, 0, 0, NORTHEAST, NONE, new Insets(0, 0, 0, 0), 0, 0));
+			add(logo, new GridBagConstraints(0, 0, 1, 1, 1, 0, CENTER, HORIZONTAL, new Insets(40, 6, 6, 6), 0, 0));
+			add(form, new GridBagConstraints(0, 1, 1, 1, 1, 0, CENTER, HORIZONTAL, new Insets(6, 6, 0, 6), 0, 0));
 			add(buttonPanel, new GridBagConstraints(0, 2, 1, 1, 0, 0, CENTER, NONE, new Insets(0, 0, 0, 0), 0, 0));
 			add(scrollPane, new GridBagConstraints(0, 3, 1, 1, 1, 1, CENTER, BOTH, new Insets(6, 6, 6, 6), 0, 0));
 		}
@@ -400,7 +417,7 @@ public class GdxSetupUI extends JFrame {
 		private void uiEvents () {
 			advancedButton.addActionListener(new ActionListener() {
 				public void actionPerformed (ActionEvent e) {
-					settings.showDialog();;
+					settings.showDialog();
 				}
 			});
 			generateButton.addActionListener(new ActionListener() {
@@ -412,6 +429,7 @@ public class GdxSetupUI extends JFrame {
 	}
 
 	class Form extends JPanel {
+		ExternalExtensionsDialog externalExtensionsDialog = new ExternalExtensionsDialog(dependencies);
 		JLabel nameLabel = new JLabel("Name:");
 		JTextField nameText = new JTextField("my-gdx-game");
 		JLabel packageLabel = new JLabel("Package:");
@@ -422,15 +440,18 @@ public class GdxSetupUI extends JFrame {
 		JTextField destinationText = new JTextField(new File("test").getAbsolutePath());
 		SetupButton destinationButton = new SetupButton("Browse");
 		JLabel sdkLocationLabel = new JLabel("Android SDK");
-		JTextField sdkLocationText = new JTextField("C:\\Path\\To\\Your\\Sdk");
+		JTextField sdkLocationText = new JTextField(
+				System.getProperty("os.name").contains("Windows")
+				? "C:\\Path\\To\\Your\\Sdk"
+				: "/path/to/your/sdk"
+		);
 		SetupButton sdkLocationButton = new SetupButton("Browse");
 
 		JPanel subProjectsPanel = new JPanel(new GridLayout());
-		JLabel versionLabel = new JLabel("LibGDX Version");
-		JComboBox versionButton = new JComboBox(new String[] {"Release " + DependencyBank.libgdxVersion});
 		JLabel projectsLabel = new JLabel("Sub Projects");
 		JLabel extensionsLabel = new JLabel("Extensions");
 		List<JPanel> extensionsPanels = new ArrayList<JPanel>();
+		SetupButton showMoreExtensionsButton = new SetupButton("Show Third Party Extensions");
 
 		{
 			uiLayout();
@@ -450,29 +471,10 @@ public class GdxSetupUI extends JFrame {
 			gameClassLabel.setForeground(Color.WHITE);
 			destinationLabel.setForeground(Color.WHITE);
 			sdkLocationLabel.setForeground(Color.WHITE);
-			sdkLocationText.setDisabledTextColor(Color.BLACK);
+			sdkLocationText.setDisabledTextColor(Color.GRAY);
 
-			versionLabel.setForeground(new Color(255, 20, 20));
-			UIManager.put("ComboBox.selectionBackground", new ColorUIResource(new Color(70, 70, 70)));
-			UIManager.put("ComboBox.selectionForeground", new ColorUIResource(Color.WHITE));
-			versionButton.updateUI();
-			versionButton.setForeground(new Color(255, 255, 255));
-			versionButton.setBackground(new Color(20, 20, 20));
-			versionButton.setPrototypeDisplayValue("I am a prototype");
-			versionButton.setUI(new BasicComboBoxUI() {
-				@Override
-				protected JButton createArrowButton () {
-					return new BasicArrowButton(
-							BasicArrowButton.SOUTH,
-							new Color(0, 0, 0),
-							new Color(0, 0, 0),
-							new Color(100, 100, 100),
-							new Color(100, 100, 100));
-				}
-			});
-
-			projectsLabel.setForeground(new Color(200, 20, 20));
-			extensionsLabel.setForeground(new Color(200, 20, 20));
+			projectsLabel.setForeground(new Color(255, 20, 20));
+			extensionsLabel.setForeground(new Color(255, 20, 20));
 
 			subProjectsPanel.setOpaque(true);
 			subProjectsPanel.setBackground(new Color(46, 46, 46));
@@ -506,8 +508,6 @@ public class GdxSetupUI extends JFrame {
 			add(sdkLocationText, new GridBagConstraints(1, 4, 1, 1, 1, 0, CENTER, HORIZONTAL, new Insets(0, 0, 0, 0), 0, 0));
 			add(sdkLocationButton, new GridBagConstraints(2, 4, 1, 1, 0, 0, CENTER, NONE, new Insets(0, 6, 0, 0), 0, 0));
 
-			add(versionLabel, new GridBagConstraints(0, 5, 1, 1, 0, 0, WEST, WEST, new Insets(20, 0, 0, 0), 0, 0));
-			add(versionButton, new GridBagConstraints(1, 5, 1, 1, 0, 0, WEST, WEST, new Insets(20, 20, 0, 0), 0, 0));
 
 			for (final ProjectType projectType : ProjectType.values()) {
 				if (projectType.equals(ProjectType.CORE)) {
@@ -576,19 +576,20 @@ public class GdxSetupUI extends JFrame {
 					}
 				}
 				
-				for (int left = depCounter - 5; left > 1; left--) {
+				for (int left = ((depCounter - 1) % 5); left > 1; left--) {
 					extensionPanel.add(Box.createHorizontalBox());
 				}
 
 				extensionsPanels.add(extensionPanel);
 			}
 
-			add(extensionsLabel, new GridBagConstraints(0, 8, 1, 1, 0, 0, WEST, WEST, new Insets(20, 0, 0, 0), 0, 0));
+			add(extensionsLabel, new GridBagConstraints(0, 8, 1, 1, 0, 0, WEST, WEST, new Insets(10, 0, 0, 0), 0, 0));
 			int rowCounter = 9;
 			for (JPanel extensionsPanel : extensionsPanels) {
 				add(extensionsPanel, new GridBagConstraints(0, rowCounter, 3, 1, 0, 0, CENTER, HORIZONTAL, new Insets(5, 0, 0, 0), 0, 0));
 				rowCounter++;
 			}
+			add(showMoreExtensionsButton, new GridBagConstraints(0, 12, 0, 1, 0, 0, CENTER, WEST, new Insets(10, 0, 10, 0), 0, 0));
 		}
 
 		File getDirectory () {
@@ -634,50 +635,110 @@ public class GdxSetupUI extends JFrame {
 					}
 				}
 			});
+			showMoreExtensionsButton.addActionListener(new ActionListener() {
+				 public void actionPerformed (ActionEvent e) {
+					  externalExtensionsDialog.showDialog();
+				 }
+			});
 		}
 	}
 
-	class SetupCheckBox extends JCheckBox {
+	public static class SetupCheckBox extends JCheckBox {
 
-		SetupCheckBox(String selectName) {
+		static Icon icon;
+		static Icon iconOver;
+		static Icon iconPressed;
+		static Icon iconPressedSelected;
+		static Icon iconSelected;
+		static Icon iconOverSelected;
+
+		static {
+			try {
+				BufferedImage iconImg = getCheckboxImage("checkbox");
+				BufferedImage iconOverImg = getCheckboxImage("checkboxover");
+				BufferedImage iconPressedImg = getCheckboxImage("checkboxpressed");
+				BufferedImage iconPressedSelectedImg = getCheckboxImage("checkboxpressedselected");
+				BufferedImage iconSelectedImg = getCheckboxImage("checkboxselected");
+				BufferedImage iconOverSelectedImg = getCheckboxImage("checkboxoverselected");
+
+				icon = new ImageIcon(iconImg);
+				iconOver = new ImageIcon(iconOverImg);
+				iconPressed = new ImageIcon(iconPressedImg);
+				iconPressedSelected = new ImageIcon(iconPressedSelectedImg);
+				iconSelected = new ImageIcon(iconSelectedImg);
+				iconOverSelected = new ImageIcon(iconOverSelectedImg);
+			} catch (IOException e) {
+				e.printStackTrace();
+			}
+		}
+
+		private static BufferedImage getCheckboxImage (String imageName) throws IOException {
+			return ImageIO.read(GdxSetupUI.class.getResourceAsStream("/com/badlogic/gdx/setup/data/" + imageName + ".png"));
+		}
+
+		SetupCheckBox () {
+			super();
+			initUI();
+		}
+		
+		SetupCheckBox (String selectName) {
 			super(selectName);
+			initUI();
+		}
+
+		private void initUI() {
 			setOpaque(false);
 			setBackground(new Color(0, 0, 0));
 			setForeground(new Color(255, 255, 255));
 			setFocusPainted(false);
+
+			setIcon(icon);
+			setRolloverIcon(iconOver);
+			setPressedIcon(iconPressed);
+			setSelectedIcon(iconSelected);
+			setRolloverSelectedIcon(iconOverSelected);
+		}
+		
+		public Icon getPressedIcon () {
+			//checkbox is missing 'pressed selected' icon, this allows us to add it
+			if (isSelected())
+				return iconPressedSelected;
+			else
+				return super.getPressedIcon();
 		}
 
 	}
 
-	public class SetupButton extends JButton {
+	public static class SetupButton extends JButton {
+		private Color textColor = Color.WHITE;
+		private Color backgroundColor = new Color(18, 18, 18);
+		private Color overColor = new Color(120, 20, 20);
+		private Color pressedColor = new Color(240, 40, 40);
 
-		SetupButton(String buttonTag) {
+		SetupButton (String buttonTag) {
 			super(buttonTag);
-			setForeground(new Color(255, 255, 255));
-			setBackground(new Color(18, 18, 18));
-			setContentAreaFilled(true);
+			setBackground(backgroundColor);
+			setForeground(textColor);
+			setContentAreaFilled(false);
 			setFocusPainted(false);
 
 			Border line = BorderFactory.createLineBorder(new Color(80, 80, 80));
 			Border empty = new EmptyBorder(4, 4, 4, 4);
 			CompoundBorder border = new CompoundBorder(line, empty);
 			setBorder(border);
+		}
 
-			getModel().addChangeListener(new ChangeListener() {
-				@Override
-				public void stateChanged(ChangeEvent e) {
-					ButtonModel model = (ButtonModel) e.getSource();
-					if (model.isRollover()) {
-						setBackground(new Color(120, 20, 20));
-					} else if (model.isArmed() || model.isPressed()) {
-						setBackground(new Color(0, 0, 0));
-					} else if (model.isSelected()) {
-						setBackground(new Color(0, 0, 0));
-					} else {
-						setBackground(new Color(38, 38, 38));
-					}
-				}
-			});
+		@Override
+		protected void paintComponent (Graphics g) {
+			if (getModel().isPressed()) {
+				g.setColor(pressedColor);
+			} else if (getModel().isRollover()) {
+				g.setColor(overColor);
+			} else {
+				g.setColor(getBackground());
+			}
+			g.fillRect(0, 0, getWidth(), getHeight());
+			super.paintComponent(g);
 		}
 	}
 
@@ -686,7 +747,7 @@ public class GdxSetupUI extends JFrame {
 			@Override
 			public void run() {
 				new GdxSetupUI();				
-			}			
+			}
 		});
 	}
 }
